force-app/main/default/objects/EEC_Social_Navigation__mdt/EEC_Social_Navigation__mdt.object-meta.xml
<CustomObject>
    <label>EEC - Social Navigation</label>
    <pluralLabel>EEC - Social Navigations</pluralLabel>
</CustomObject>