force-app/main/default/objects/EEC_Social_Navigation__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Determines whether this item is active or not. Only the active records get displayed.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>