force-app/main/default/objects/EEC_Social_Navigation__mdt/fields/Footer_Config_Name__c.field-meta.xml
<CustomField>
    <fullName>Footer_Config_Name__c</fullName>
    <inlineHelpText>The name that is available to choose from in the Experience Builder.</inlineHelpText>
    <label>Footer Config Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>