force-app/main/default/objects/EEC_Social_Navigation__mdt/fields/Redirection_URL__c.field-meta.xml
<CustomField>
    <fullName>Redirection_URL__c</fullName>
    <inlineHelpText>URL of the webpage you want this item to redirect to on being clicked.</inlineHelpText>
    <label>Redirection URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>