force-app/main/default/objects/EEC_Social_Navigation__mdt/listViews/All_Details.listView-meta.xml
<ListView>
    <fullName>All_Details</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Active__c</columns>
    <columns>Icon_URL__c</columns>
    <columns>Order__c</columns>
    <columns>Redirection_URL__c</columns>
    <columns>Footer_Config_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Details</label>
</ListView>